Полная логика с работой таймеров голосовая при котором при начале лидеров у одного из узлов другие не могут начаться